# RenderShape

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cube_edge_points.csv  generate_cube.py  generate_shape.py  shape_edge_points.csv
include/: Cube.h  Dot.h  Matrix.h  PlatformInput.h  RenderConfig.h  Shape.h  renderUtils.h
src/: Cube.cpp  Dot.cpp  Matrix.cpp  PlatformInput.cpp  RenderConfig.cpp  Shape.cpp  demo.cpp  renderUtils.cpp
